at screen width 1440px and below the now playing column no longer visible

--- a/discord_themes/project_nova/projectNova_SourrR34.css
+++ b/discord_themes/project_nova/projectNova_SourrR34.css
@@ -462,6 +462,12 @@
 [class*="nowPlayingColumn"] .container-1oAagU{
     background: none;
 }
+/* Now Playing Column */
+@media (max-width: 1440px) { 
+	[class*="nowPlayingColumn-"]{
+		display: none;
+	}
+}
 /* FAMILY CENTER */
 #requests-tab,
 #activity-tab{
